# frailty-viz

./: .gitignore  Dockerfile  README.md
concentric-app/: app.py  pyproject.toml
concentric-front-end/: package-lock.json  package.json
concentric-front-end/src/: App.js
concentric-front-end/src/components/: Column.js  MainGraph.js  entityAutoComplete.js
concentric-front-end/src/styles/: App.scss  MainGraph.scss
concentric-front-end/src/utils/: utils.js
data/: instructions.md
